--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -56,6 +56,7 @@ header {
         display: block;
         max-width: 240px;
         border-radius: 50%;
+        margin: 0px 50px;
     }
 }
 
